--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,19 @@
 /* Global styles */
 body {
   background-color: black;
-  background-image: url("/grainy-texture.avif");
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #000000;
 }
 
 body::after {
-  content: "";
-  background-image: url("/grainy-texture.avif");
-  opacity: 0.1;
+  content: "";  
+  background-image: url("/luis-reyes-mTorQ9gFfOg-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  opacity: 0.08;
   position: fixed;
   top: 0;
   left: 0;
@@ -48,10 +50,11 @@ a:hover {
 }
 
 .cta-btn {
+  margin-top: 5rem;
   display: inline-block;
   padding: 1rem 2rem;
   border-radius: 5px;
-  background-color: #73f74b;
+  background-color: #34def5;
   color: black;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -63,27 +66,56 @@ a:hover {
   color: white;
 }
 
-/* navigation bar styles */
-.topnav{
-  background-color: #73f74b;
-  height: 50px;
+.break-line {
+  border: none;
+  height: 1px;
+  background-color: #34def5;
+  margin: 20px 0;
+  margin-top: 100px;
 }
-.topnav a{
-  float:right;
+
+/* navigation bar styles */
+.topnav {
+  position: relative;
+  transition: position 0.5s ease-in-out;
+  background-color: #34def5;
+  height: 80px;
+}
+
+.topnav a {
+  float: right;
   font-size: 20px;
-  padding: 10px;
+  padding: 25px;
   margin-right: 15px;
   text-align: center;
 }
 
-.topnav a:hover{
-  background-color: rgb(8, 151, 8);
+.topnav a {
+  position: relative;
+  color: black;
+  font-weight: 700;
 }
+
+.topnav a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 15px;
+  left: 0;
+  background-color: black;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.topnav a:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
 /* Hero section styles */
 .hero {
-  background-image: url("hero-bg.jpg");
-  background-size: cover;
-  background-position: center;
   min-height: 500px;
   display: flex;
   flex-direction: column;
@@ -91,6 +123,7 @@ a:hover {
   align-items: center;
   text-align: center;
   font-size: 1rem;
+  margin-top: 3rem;
   margin-bottom: 1rem;
   color: #fff;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
@@ -102,9 +135,7 @@ a:hover {
   color: #fff;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
-.hero h1:hover{
-  color: #73f74b;
-}
+
 .hero p {
   font-size: 1.5rem;
   margin-bottom: 2rem;
@@ -114,80 +145,29 @@ a:hover {
 }
 
 /* About section styles */
-#about {
-  background-image: url("justin-veenema-zP80MWApkn8-unsplash.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+#about {  
   padding: 5rem 2rem;
   text-align: left;
   color: #f5f5f5;
 }
-#about h2{
+
+#about h2 {
   font-weight: bold;
   font-size: 3rem;
   margin-top: 3rem;
-  color: #73f74b;
+  color: white;
+  text-align: center;
 }
+
 #about p {
+  max-width: 800px;
+  margin: 0 auto;
   margin-bottom: 2rem;
-  font-size: 1.5rem;
-  max-width: 700px;
-  font-weight: bold;
-  text-align: left;
+  font-size: 1.2rem;
+  line-height: 1.8;
 }
 
 /* Routines section styles */
-/* #routines {
-  padding: 5rem 2rem;
-  text-align: center;
-  color: white;
-}
-
-#routines h2 {
-  margin-bottom: 2rem;
-}
-
-#routines ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0;
-  color: white;
-}
-
-#routines li {
-  margin: 1rem;
-  text-align: left;
-  max-width: 300px;
-  background-color: #fff;
-  color: #000000;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-#routines li img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-#routines li h3 {
-  font-size: 1.5rem;
-  margin: 1rem;
-  margin-bottom: 0;
-}
-
-#routines li p {
-  font-size: 1.2rem;
-  margin: 1rem;
-  margin-top: 0;
-  line-height: 1.5;
-} */
-
 #routine {
   background-color: black;
   color: white;
@@ -195,25 +175,27 @@ a:hover {
 }
 
 #routine h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
   text-align: center;
   margin-bottom: 2rem;
-  color: #73f74b;
 }
 
 #routine p {
-  font-weight: bold;
+  font-size: 1.2rem;
   text-align: center;
   margin-bottom: 4rem;
 }
-#routine .container h3{
+
+#routine .container h3 {
   text-align: center;
   font-size: 1.5rem;
 }
-#routine .container p{
+
+#routine .container p {
   font-size: 1.2rem;
 }
+
 .routine-cards {
   display: flex;
   justify-content: center;
@@ -233,9 +215,8 @@ a:hover {
 }
 
 .routine-card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-25px);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  background-color:#73f74b ;
 }
 
 .routine-card h3 {
@@ -268,55 +249,47 @@ a:hover {
 }
 
 .routine-card .btn:hover {
-  background-color:black;
-  color: white;
+  background-color: #34def5;
+  color: black;
   font-size: 1.4rem;
 }
 
 @media screen and (max-width: 768px) {
-.routine-card {
-max-width: 100%;
-margin: 1rem;
-}
+  .routine-card {
+    max-width: 100%;
+    margin: 1rem;
+  }
 }
 
-#programs{
+#programs {
   color: #f5f5f5;
+  background-color: black;
 }
 
-#programs h2{
+#programs h2 {
   margin-top: 4rem;
   text-align: center;
-  font-size: 3rem;
-  font-weight: bold;
-  color: #73f74b;
-}
-
-#programs p{
-  margin: 2rem;
-  font-size: 1.5rem;
-  text-align: center;
+  font-size: 2rem;
   font-weight: bold;
   color: white;
 }
 
-#program {
-  background-color: #f5f5f5;
-  padding: 4rem 0;
-}
-
-#program h2 {
-  font-size: 2.5rem;
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 2rem;
-  color: #73f74b;
-}
-
-#program p {
+#programs p {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+  line-height: 1.8;
   font-size: 1.2rem;
   text-align: center;
-  margin-bottom: 4rem;
+}
+
+#programs .container h3 {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+#routine .container p {
+  font-size: 1.2rem;
 }
 
 .program-cards {
@@ -327,12 +300,10 @@ margin: 1rem;
 }
 
 .program-card {
-  background-color: #fff;
+  background-color: #f5f5f5;
+  color: black;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding-bottom: 3rem;
-  padding-top: 2rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding: 2rem;
   margin: 2rem;
   text-align: center;
   transition: all 0.3s ease-in-out;
@@ -340,13 +311,12 @@ margin: 1rem;
 }
 
 .program-card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-25px);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  background-color: #73f74b;
 }
 
 .program-card h3 {
-  font-size: 1.65rem;
+  font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
 }
@@ -357,10 +327,8 @@ margin: 1rem;
 }
 
 .program-card p {
-  font-size: 1.15rem;
-  font-weight: bold;
+  font-size: 1.2rem;
   margin-bottom: 2rem;
-  padding-top: 1rem;
 }
 
 .program-card .btn {
@@ -377,20 +345,33 @@ margin: 1rem;
 }
 
 .program-card .btn:hover {
-  color: white;
+  background-color: #34def5;
+  color: black;
   font-size: 1.4rem;
 }
 
-footer{
-  background-color: #73f74b;
+@media screen and (max-width: 768px) {
+  .program-card {
+    max-width: 100%;
+    margin: 1rem;
+  }
+}
+
+footer {
+  margin-top: 100px;
+  position: absolute;
+  background-color: #34def5;
   color: black;
   padding-left: 10px;
+  text-align: center;
+  min-height: 80px;
+  width: 100%;
 }
-footer a{
-  font-weight: bold;
-}
-footer p{
+
+footer p {
+  position: relative;
   font-size: 1rem;
+  margin-top: 30px;
 }
 
 /* Testimonials section styles */
@@ -430,4 +411,7 @@ footer p{
   font-size: 1.5rem;
   margin: 1rem;
   margin-bottom: 0;
+}
+#contact {
+  color: white;
 }
